@@ -1,6 +1,9 @@
 Changes for 1.8.2
 
  - [ZBX-2108] added checking double values for "out of range" errors for the MySQL (Sasha)
+ - [ZBX-2114] improvements in sql filtering of hosts and templates by nodes (Aly)
+ - [ZBX-18,ZBX-1018,ZBX-1070,ZBX-1123,ZBXNEXT-96] dealing with database problems in a uniform way for all database engines (asaveljevs,Sasha)
+ - [ZBX-2089] fixed computing calculated items for proxied hosts (asaveljevs,Sasha)
  - [ZBX-2109] disabled Web monitoring for disabled hosts and hosts under maintenance (asaveljevs,Sasha)
  - [ZBX-2121] events from Windows eventlog with type 'EVENTLOG_SUCCESS' are treated as 'Information' in Zabbix as in Windows (Dmitry)
  - [ZBX-1994] using /proc/sys instead of the deprecated sysctl() on Linux (asaveljevs)
